--- a/_config.yml
+++ b/_config.yml
@@ -1,34 +1,120 @@
 # Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+
+
+# In addition to these settings, there is a file _data/tokens-template.yml
+# that you'll want to customize for your site. It's named 'tokens' because
+# that was it's original purpose, but because tokens.yml is .gitexcluded, it's
+# a good place to store your site-specific data that you'd rather not have
+# forked or cloned. Of course, that means you'd want to back it up elsewhere.
+
+# Also, for your post bylines, add author info for yourself in `_data/authors.yml`.
+# (Using that method instead of site.owner, in case your posts get cloned with your repo.)
 
 # Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+title: Aude Magni
+description: 
+owner:
+  name: Luiz Gabriel # or company name
+  email: gabrielfieldabarra@gmail.com
+  url: http://audemagni.com
+first_published: 2016 # if migrating another site, the year of your first publish
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://arkadianriver.com" # the base hostname & protocol for your site
+
+# on landing page
+# - set the greeting only if you want to display the first green section
+greeting:
+  title: Welcome!  
+  text: I hope you enjoy my collection
+# - title for your blog's featured posts
+features-title: Featured topics
+# - displayed at the bottom
+closing-head: Thanks for visiting
+closing-para: Feel free to get in touch. Cheers!
+
+# on all pages (and the first three you list display with greeting, if included)
+social:
+  github: https://github.com/LGabrielM
+  #linkedin-square: https://linkedin.com/in/garyfaircloth
+  #facebook-official: https://facebook.com/gary.faircloth
+  #google-plus-square: https://plus.google.com/u/0/+GaryFaircloth
+  #email: /contact/
+  #flickr:
+  #instagram:
+  #youtube-square:
+  #spotify:
+  #stack-overflow:
+  #vimeo:
+  #reddit:
+  #stubleupon:
+  #delicious:
+  #pied-piper:
+  #digg:
+  #soundcloud:
+  #deviantart:
+  #angellist:
+  #tumblr-square:
+  #stackexchange:
+  #weibo:
+  #trello:
+  #foursquare:
+  #linux:
+  #bitbucket-square:
+  #vk:
+  #slack:
+  #vine:
+  #weixin:
+  #yelp:
+  #skyatlas:
+  #leanpub:
+  #connectdevelop:
+  #ils:
+  #forumbee:
+  #tripadvisor:
+  #amazon:
+
+# if you use this repo's `ruby compose.rb` script to initiate new posts, put the
+# command to invoke your editor here. (I didn't spend time dealing with spaces
+# and full paths of the various OSes in compose.rb. For my Windows
+# environment, I just put a subl.cmd file in my PATH that points to the full
+# path to Sublime's subl.exe.) Also, put your most common post extension.
+compose:
+  editor: subl
+  extension: md
+
+# choose where to put back and next links:
+# top, bottom, both, none
+navlinks: bottom
+
+# expecting more works? mark your list as in-progress
+works_in_progress: yes
+
+# If you have custom extensions, specifically includes/_my/custom.scss,
+# set this to yes
+custom_extensions: no
 
 # Build settings
+permalink: /:categories/:title.html
 markdown: kramdown
-theme: minima
-gems:
-  - jekyll-feed
-exclude:
-  - Gemfile
-  - Gemfile.lock
+#sass:
+#  style: compressed
+exclude: ['site.bat','compose.rb','README.md']
+include: ['_pages','.htaccess']
+defaults:
+  - scope:
+      path: _pages
+    values:
+      layout: page
+      #permalink: /:slug/ # dunna work. See github.com/jekyll/jekyll/issues/2280
+  - scope:
+      path: _posts
+    values:
+      layout: post
+  - scope:
+      path: _drafts
+    values:
+      layout: post
+
+# to initialize arrays in assignments (assign myarr = site.empty_array)
+# (easier to grok than assign myarr = '' | split',')
+empty_array: []
