--- a/_config.yml
+++ b/_config.yml
@@ -11,11 +11,11 @@
 # (Using that method instead of site.owner, in case your posts get cloned with your repo.)
 
 # Site settings
-title: Aude Magni
-description: 
+title: Aude esse Magni
+description: Dare to be great
 owner:
-  name: Luiz Gabriel # or company name
-  email: gabrielfieldabarra@gmail.com
+  name: Viale de Lara # or company name
+  email: vialedelara@gmail.com
   url: http://audemagni.com
 first_published: 2016 # if migrating another site, the year of your first publish
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -24,23 +24,23 @@ url: "http://arkadianriver.com" # the base hostname & protocol for your site
 # on landing page
 # - set the greeting only if you want to display the first green section
 greeting:
-  title: Welcome!  
-  text: I hope you enjoy my collection
+  title: Welcome to Aude esse Magni!  
+  text: I hope you enjoy your time
 # - title for your blog's featured posts
 features-title: Featured topics
 # - displayed at the bottom
-closing-head: Thanks for visiting
-closing-para: Feel free to get in touch. Cheers!
+closing-head: I hope you feel inspired
+closing-para: Have a wonderful day. Stay strong!
 
 # on all pages (and the first three you list display with greeting, if included)
 social:
   github: https://github.com/LGabrielM
-  #linkedin-square: https://linkedin.com/in/garyfaircloth
-  #facebook-official: https://facebook.com/gary.faircloth
-  #google-plus-square: https://plus.google.com/u/0/+GaryFaircloth
-  #email: /contact/
+  #linkedin-square: https://linkedin.com/
+  #facebook-official: https://facebook.com/vialedelara
+  #google-plus-square: https://plus.google.com/
+  email: /contact/
   #flickr:
-  #instagram:
+  instagram: https://instagram.com/lgabrielm/
   #youtube-square:
   #spotify:
   #stack-overflow:
