--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description:        “Aude Magni is a community of good people.”
 reading_time:       true
 words_per_minute:   150
 logo:               'assets/img/logo.png'
-background:         'assets/img/cavus.JPG’
+background:         'assets/img/cavus.JPG'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
 url:                http://audemagni.com
