--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale:             en_US
 url:                http://audemagni.com
 
 # Jekyll
-permalink:          /:title/
+permalink:          none 
 markdown:           kramdown
 highlighter:        rouge
 kramdown:
